--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Contact.css">
-    <link rel="stylesheet" href="../General.css">
+    <link rel="stylesheet" href="General.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Well Care-Contact Us</title>
@@ -14,11 +14,11 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Pics/logo.png" alt="">
+            <img src="logo.png" alt="">
             <h1>Well Care</h1>
         </div>
         <nav class="nav-links">
-            <button class="nav_button"><a href="../Home.html">Home</a></button>
+            <button class="nav_button"><a href="Home.html">Home</a></button>
             <button class="nav_button"><a href="Services.html">Services</a></button>
             <button class="nav_button"><a href="About.html">About</a></button>
             <button class="nav_button"><a href="Contact.html">Contact</a></button>
@@ -29,7 +29,7 @@
     </header>
     
     <aside>
-            <button class="nav_button"><a href="../Home.html">Home</a></button>
+            <button class="nav_button"><a href="Home.html">Home</a></button>
             <button class="nav_button"><a href="Services.html">Services</a></button>
             <button class="nav_button"><a href="About.html">About</a></button>
             <button class="nav_button"><a href="Contact.html">Contact</a></button>
@@ -75,14 +75,14 @@
     <footer>
         <div class="upper">
             <div class="lowerlogo">
-                <img src="../Pics/logo.png" alt="">
+                <img src="logo.png" alt="">
             </div>
         </div>
         <div class="lower">
             <div class="socials">
                 <h4>You can get us On</h4>
-                <button><img src="../Pics/linkedin.svg" alt="Our Linkedin"><p id="LinkedIn">LinkedIn</p></button>
-                <button><img src="../Pics/instagram.svg" alt="Our Insta"><p>Instagram</p></button>
+                <button><img src="linkedin.svg" alt="Our Linkedin"><p id="LinkedIn">LinkedIn</p></button>
+                <button><img src="instagram.svg" alt="Our Insta"><p>Instagram</p></button>
             </div>
             <div class="links">
                 <h4>Quick Links</h4>
@@ -91,6 +91,7 @@
             </div>
         </div>
     </footer>
-    <script src="../General.js"></script>
+    <script src="General.js"></script>
 </body>
+
 </html>
