--- a/Services.html
+++ b/Services.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Services.css">
-    <link rel="stylesheet" href="../General.css">
+    <link rel="stylesheet" href="General.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Well Care-Services</title>
@@ -14,11 +14,11 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Pics/logo.png" alt="">
+            <img src="logo.png" alt="">
             <h1>Well Care</h1>
         </div>
         <nav class="nav-links">
-            <button class="nav_button"><a href="../Home.html">Home</a></button>
+            <button class="nav_button"><a href="Home.html">Home</a></button>
             <button class="nav_button"><a href="Services.html">Services</a></button>
             <button class="nav_button"><a href="About.html">About</a></button>
             <button class="nav_button"><a href="Contact.html">Contact</a></button>
@@ -29,7 +29,7 @@
     </header>
     
     <aside>
-            <button class="nav_button"><a href="../Home.html">Home</a></button>
+            <button class="nav_button"><a href="Home.html">Home</a></button>
             <button class="nav_button"><a href="Services.html">Services</a></button>
             <button class="nav_button"><a href="About.html">About</a></button>
             <button class="nav_button"><a href="Contact.html">Contact</a></button>
@@ -39,36 +39,36 @@
      <section class="hero">
         <h2>Your Health, Our Priority</h2>
         <p>Discover a range of Well Care services designed to help you live your best life.</p>
-        <img src="../Pics/logo.png" alt="Wellness Care Image">
+        <img src="logo.png" alt="Wellness Care Image">
     </section>
     <section class="services-list">
         <div class="service-card">
-            <img src="../Pics/medical consultation.jpg" alt="Consultation">
+            <img src="medical consultation.jpg" alt="Consultation">
             <h3>Consultation</h3>
             <p>Personalized health consultations with our expert team at the office.</p>
         </div>
         <div class="service-card">
-            <img src="../Pics/nutrition.jpg" alt="Nutrition">
+            <img src="nutrition.jpg" alt="Nutrition">
             <h3>Nutrition Plans</h3>
             <p>Custom meal and nutrition plans tailored to your needs.</p>
         </div>
         <div class="service-card">
-            <img src="../Pics/fitness.jpg" alt="Fitness">
+            <img src="fitness.jpg" alt="Fitness">
             <h3>Fitness Coaching</h3>
             <p>One-on-one or group fitness sessions for all levels.</p>
         </div>
         <div class="service-card">
-            <img src="../Pics/mental health support.jpg" alt="Therapy">
+            <img src="mental health support.jpg" alt="Therapy">
             <h3>Therapy & Support</h3>
             <p>Mental health support and therapy sessions in a safe space.</p>
         </div>
         <div class="service-card">
-            <img src="../Pics/prescription refill.jpg" alt="Prescription">
+            <img src="prescription refill.jpg" alt="Prescription">
             <h3>Prescription Refills</h3>
             <p>Resupply of your drug prescriptions available down at the pharmacy.</p>
         </div>
         <div class="service-card">
-            <img src="../Pics/virtual appointment.jpg" alt="Virtual Appointment">
+            <img src="virtual appointment.jpg" alt="Virtual Appointment">
             <h3>Virtual Appointments</h3>
             <p>Online meetings with staff at pre-registered times.</p>
         </div>
@@ -81,14 +81,14 @@
     <footer>
         <div class="upper">
             <div class="lowerlogo">
-                <img src="../Pics/logo.png" alt="">
+                <img src="logo.png" alt="">
             </div>
         </div>
         <div class="lower">
             <div class="socials">
                 <h4>You can get us On</h4>
-                <button><img src="../Pics/linkedin.svg" alt="Our Linkedin"><p id="LinkedIn">LinkedIn</p></button>
-                <button><img src="../Pics/instagram.svg" alt="Our Insta"><p>Instagram</p></button>
+                <button><img src="linkedin.svg" alt="Our Linkedin"><p id="LinkedIn">LinkedIn</p></button>
+                <button><img src="instagram.svg" alt="Our Insta"><p>Instagram</p></button>
             </div>
             <div class="links">
                 <h4>Quick Links</h4>
@@ -97,6 +97,7 @@
             </div>
         </div>
     </footer>
-    <script src="../General.js"></script>
+    <script src="General.js"></script>
 </body>
+
 </html>
