--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Well Care</h1>
         </div>
         <nav class="nav-links">
-            <button class="nav_button"><a href="Home.html">Home</a></button>
+            <button class="nav_button"><a href="index.html">Home</a></button>
             <button class="nav_button"><a href="Services.html">Services</a></button>
             <button class="nav_button"><a href="About.html">About</a></button>
             <button class="nav_button"><a href="Contact.html">Contact</a></button>
@@ -29,7 +29,7 @@
     </header>
     
     <aside>
-            <button class="nav_button"><a href="Home.html">Home</a></button>
+            <button class="nav_button"><a href="index.html">Home</a></button>
             <button class="nav_button"><a href="Services.html">Services</a></button>
             <button class="nav_button"><a href="About.html">About</a></button>
             <button class="nav_button"><a href="Contact.html">Contact</a></button>
